Fix Total Item Value on mobiles and tablets.

--- a/extension/scripts/features/item-values/ttItemValues.css
+++ b/extension/scripts/features/item-values/ttItemValues.css
@@ -30,7 +30,6 @@ span.tt-item-price {
 
 body.tt-mobile .tt-item-price,
 body.tt-tablet .tt-item-price {
-	position: absolute;
 	right: -10px;
 	top: 10px;
 	float: unset;
